fixed nav on services and contact pages. Stretch complete.

--- a/css/index.css
+++ b/css/index.css
@@ -79,13 +79,6 @@ nav {
 	justify-content: space-evenly
 }
 
-
-/* nav .hov{
-	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
-} */
-
 .hov{
   color: lightgray;
   text-decoration: none;
